force-app/main/default/objects/Account/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration</label>
    <referenceTo>Configuration__c</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>