force-app/main/default/objects/Account/fields/Configuration_Site__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configuration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Configuration_Site__c.Tech_Compte__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Configuration_Site__c</referenceTo>
    <relationshipLabel>Comptes</relationshipLabel>
    <relationshipName>Comptes</relationshipName>
    <type>Lookup</type>
</CustomField>