force-app/main/default/objects/Account/fields/ConfigurationConsigne__c.field-meta.xml
<CustomField>
    <fullName>ConfigurationConsigne__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Configuration</label>
    <type>Checkbox</type>
</CustomField>