force-app/main/default/objects/Account/fields/Conge_habituel_date_de_debut__c.field-meta.xml
<CustomField>
    <fullName>Conge_habituel_date_de_debut__c</fullName>
    <inlineHelpText>Veuillez saisir la date sous format &quot;JJ/MM&quot;.</inlineHelpText>
    <label>Congé habituel - date de début</label>
    <length>5</length>
    <type>Text</type>
</CustomField>