force-app/main/default/objects/Account/fields/Conge_habituel_date_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Conge_habituel_date_de_fin__c</fullName>
    <inlineHelpText>Veuillez saisir la date sous format JJ/MM</inlineHelpText>
    <label>Congé habituel - date de fin</label>
    <length>5</length>
    <type>Text</type>
</CustomField>