force-app/main/default/objects/Account/fields/Consigne_partagee_avec__c.field-meta.xml
<CustomField>
    <fullName>Consigne_partagee_avec__c</fullName>
    <label>Consigne partagée avec</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Consigne_partagee_avec_casiers_partages__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Relais Colis</fullName>
            </value>
            <value>
                <fullName>Dropbird</fullName>
            </value>
            <value>
                <fullName>Oh My Keys</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>