force-app/main/default/objects/Account/fields/Consigne_partagee_avec_casiers_partages__c.field-meta.xml
<CustomField>
    <fullName>Consigne_partagee_avec_casiers_partages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consigne partagée avec casiers partagés</label>
    <type>Checkbox</type>
</CustomField>