force-app/main/default/objects/Account/fields/Consulter_les_tickets__c.field-meta.xml
<CustomField>
    <fullName>Consulter_les_tickets__c</fullName>
    <formula>/*[Inter]*/
IF(AND(NOT(CONTAINS($Label.RT_Consigne_Compte, RecordType.Id)),OR(CONTAINS($Label.RT_INT_Compte, RecordType.Id ),CONTAINS($Label.RT_INT_Compte2, RecordType.Id))),
IF($Label.Consulter_Ticket_INTER == $Label.TECH_ENV_NOT_AVAILABLE,
HYPERLINK($Label.TECH_ENV_NOT_AVAILABLE,$Label.Click_Here),
HYPERLINK($Label.Consulter_Ticket_INTER+Reference__c+&quot;&amp;uiculture=en-EN&quot;,
$Label.Click_Here)),

/*[France only]*/
IF(OR(CONTAINS($Label.RT_France_Compte, RecordType.Id), CONTAINS($Label.RT_Consigne_Compte, RecordType.Id)),
IF($Label.Consulter_Ticket == $Label.TECH_ENV_NOT_AVAILABLE,
HYPERLINK($Label.TECH_ENV_NOT_AVAILABLE,$Label.Click_Here),
HYPERLINK($Label.Consulter_Ticket+Reference__c+&quot;&amp;uiculture=fr-FR&quot;, $Label.Click_Here )),null)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consulter les tickets</label>
    <type>Text</type>
</CustomField>