force-app/main/default/objects/Account/fields/Consulter_liste_colis__c.field-meta.xml
<CustomField>
    <fullName>Consulter_liste_colis__c</fullName>
    <formula>HYPERLINK(&quot;https://&quot;&amp;$Label.Consulter_la_liste_des_colis&amp;&quot;/#/parcel?pudoId=&quot;+Reference__c, $Label.Click_Here )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consulter la liste des colis</label>
    <type>Text</type>
</CustomField>