force-app/main/default/objects/Account/fields/Contact_deploiement__c.field-meta.xml
<CustomField>
    <fullName>Contact_deploiement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact déploiement</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comptes2</relationshipName>
    <type>Lookup</type>
</CustomField>