force-app/main/default/objects/Account/fields/Contact_exploitation__c.field-meta.xml
<CustomField>
    <fullName>Contact_exploitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact exploitation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comptes3</relationshipName>
    <type>Lookup</type>
</CustomField>