force-app/main/default/objects/Account/fields/Contexte__c.field-meta.xml
<CustomField>
    <fullName>Contexte__c</fullName>
    <label>Contexte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exclusion</fullName>
            </value>
            <value>
                <fullName>Résiliation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>