force-app/main/default/objects/Account/fields/Contrat__c.field-meta.xml
<CustomField>
    <fullName>Contrat__c</fullName>
    <description>Lien permettant d&#39;ouvrir l&#39;application de publipostage de Pickup.</description>
    <formula>IF
( 
  NOT(ISPICKVAL( Version_de_contrat__c , &quot;Sans contrat&quot;)) ,
 
    HYPERLINK(&quot;http://&quot;&amp; $Label.Publipostage &amp;&quot;/Document/GetContractDocumentsBySiteId?internationalSiteId=&quot;+Reference_internationale__c+&quot;&amp;contractUniqueName=&quot;+TEXT(Version_de_contrat__c)
    ,IMAGE(&quot;/resource/Lien_contrat&quot;,&quot;1&quot;)&amp; $Label.Click_Here )

    ,$Label.Lien_Non_Dispo
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contrat</label>
    <type>Text</type>
</CustomField>