force-app/main/default/objects/Account/fields/Contrat_Joint__c.field-meta.xml
<CustomField>
    <fullName>Contrat_Joint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ technique alimenté par un trigger. Il permet de savoir s&#39;il y a un fichier joint au format &quot;ID PUDO&quot; + &quot;_&quot; + une chaîne de caractères.</description>
    <label>Contrat Joint</label>
    <type>Checkbox</type>
</CustomField>