force-app/main/default/objects/Account/fields/Controle_collecte__c.field-meta.xml
<CustomField>
    <fullName>Controle_collecte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrôle collecte</label>
    <type>Checkbox</type>
</CustomField>