force-app/main/default/objects/Account/fields/Controle_devoyes__c.field-meta.xml
<CustomField>
    <fullName>Controle_devoyes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrôle dévoyés</label>
    <type>Checkbox</type>
</CustomField>