force-app/main/default/objects/Account/fields/Controle_livraisons__c.field-meta.xml
<CustomField>
    <fullName>Controle_livraisons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrôle livraisons</label>
    <type>Checkbox</type>
</CustomField>