force-app/main/default/objects/Account/fields/Controle_retrait__c.field-meta.xml
<CustomField>
    <fullName>Controle_retrait__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrôle retrait</label>
    <type>Checkbox</type>
</CustomField>