force-app/main/default/objects/Account/fields/Controle_suggestions__c.field-meta.xml
<CustomField>
    <fullName>Controle_suggestions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contrôle suggestions</label>
    <type>Checkbox</type>
</CustomField>