force-app/main/default/objects/Account/fields/ConversionTerminated__c.field-meta.xml
<CustomField>
    <fullName>ConversionTerminated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ConversionTerminated</label>
    <type>Checkbox</type>
</CustomField>