force-app/main/default/objects/Account/fields/Coordinateur_logistique__c.field-meta.xml
<CustomField>
    <fullName>Coordinateur_logistique__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinateur logistique</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comptes4</relationshipName>
    <type>Lookup</type>
</CustomField>