force-app/main/default/objects/Account/fields/Criteres_lors_de_la_validation__c.field-meta.xml
<CustomField>
    <fullName>Criteres_lors_de_la_validation__c</fullName>
    <inlineHelpText>Affiche l&#39;état des indicateurs lors de la soumission d&#39;approbation</inlineHelpText>
    <label>Critères lors de la validation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>