force-app/main/default/objects/Account/fields/Criteres_lors_de_la_validation_PC__c.field-meta.xml
<CustomField>
    <fullName>Criteres_lors_de_la_validation_PC__c</fullName>
    <description>Affiche l&#39;état des indicateurs lors de la soumission pour l&#39;approbation de point Pickup contact.</description>
    <label>Critères lors de la validation PC</label>
    <type>TextArea</type>
</CustomField>