force-app/main/default/objects/Account/fields/Criteres_prospect_converti__c.field-meta.xml
<CustomField>
    <fullName>Criteres_prospect_converti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Critères prospect converti (champ tech)</label>
    <type>Checkbox</type>
</CustomField>