force-app/main/default/objects/Account/fields/Date_d_activation__c.field-meta.xml
<CustomField>
    <fullName>Date_d_activation__c</fullName>
    <description>Champ alimenté par un workflow pour historiser la date de passage en état 4 d&#39;une consigne.</description>
    <label>Date d&#39;activation</label>
    <type>Date</type>
</CustomField>