force-app/main/default/objects/Account/fields/Date_d_installation__c.field-meta.xml
<CustomField>
    <fullName>Date_d_installation__c</fullName>
    <label>Date d&#39;installation</label>
    <type>Date</type>
</CustomField>