force-app/main/default/objects/Account/fields/Date_de_fin_d_indisponibilit__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_d_indisponibilit__c</fullName>
    <label>Date de fin d&#39;indisponibilité</label>
    <type>Date</type>
</CustomField>