force-app/main/default/objects/Account/fields/Date_de_fin_de_modification__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_de_modification__c</fullName>
    <label>Date de fin de modification</label>
    <type>Date</type>
</CustomField>