force-app/main/default/objects/Account/fields/Date_de_formation_prevue__c.field-meta.xml
<CustomField>
    <fullName>Date_de_formation_prevue__c</fullName>
    <label>Date de formation prévue</label>
    <type>Date</type>
</CustomField>