force-app/main/default/objects/Account/fields/Date_de_la_formation_reelle__c.field-meta.xml
<CustomField>
    <fullName>Date_de_la_formation_reelle__c</fullName>
    <label>Date de formation réelle</label>
    <type>Date</type>
</CustomField>