force-app/main/default/objects/Account/fields/Date_de_mise_a_jour_seuil_calcule__c.field-meta.xml
<CustomField>
    <fullName>Date_de_mise_a_jour_seuil_calcule__c</fullName>
    <label>Date de mise à jour de seuil calculé</label>
    <type>Date</type>
</CustomField>