force-app/main/default/objects/Account/fields/Date_de_mise_a_jour_Seuil_contractuel__c.field-meta.xml
<CustomField>
    <fullName>Date_de_mise_a_jour_Seuil_contractuel__c</fullName>
    <label>Date de mise à jour de seuil contractuel</label>
    <type>Date</type>
</CustomField>