force-app/main/default/objects/Account/fields/Date_de_modification_Amplitude_Horaire__c.field-meta.xml
<CustomField>
    <fullName>Date_de_modification_Amplitude_Horaire__c</fullName>
    <description>Date de la dernière modification de l&#39;amplitude horaire du relais</description>
    <label>Date de modification Horaire</label>
    <type>Date</type>
</CustomField>