force-app/main/default/objects/Account/fields/Date_de_passage_etat2__c.field-meta.xml
<CustomField>
    <fullName>Date_de_passage_etat2__c</fullName>
    <label>Date de passage état 2</label>
    <type>Date</type>
</CustomField>