force-app/main/default/objects/Account/fields/Date_de_premiere_synchronisation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_premiere_synchronisation__c</fullName>
    <label>Date de première synchronisation</label>
    <type>Date</type>
</CustomField>