force-app/main/default/objects/Account/fields/Date_de_retractation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_retractation__c</fullName>
    <label>Date de rétractation</label>
    <type>Date</type>
</CustomField>