force-app/main/default/objects/Account/fields/Date_Modification_ActifSansScan__c.field-meta.xml
<CustomField>
    <fullName>Date_Modification_ActifSansScan__c</fullName>
    <description>Date de la derniere modification du commentaire actif sans scan</description>
    <label>Date de modification</label>
    <type>Date</type>
</CustomField>