force-app/main/default/objects/Account/fields/Date_Modification_InactifAvecScan__c.field-meta.xml
<CustomField>
    <fullName>Date_Modification_InactifAvecScan__c</fullName>
    <description>Date de la derniere modification du commentaire inactif avec scan</description>
    <label>Date de modification</label>
    <type>Date</type>
</CustomField>