force-app/main/default/objects/Account/fields/DateFinDactivite_Formule__c.field-meta.xml
<CustomField>
    <fullName>DateFinDactivite_Formule__c</fullName>
    <formula>Date_de_fin_d_activite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de fin d&#39;activité</label>
    <type>Date</type>
</CustomField>