force-app/main/default/objects/Account/fields/Debtor_Number__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Number__c</fullName>
    <label>Debtor Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>