force-app/main/default/objects/Account/fields/Debut_pause_dejeuner__c.field-meta.xml
<CustomField>
    <fullName>Debut_pause_dejeuner__c</fullName>
    <label>Début pause déjeuner de référence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_HOR</valueSetName>
    </valueSet>
</CustomField>