force-app/main/default/objects/Account/fields/Decommissionnement_de_device_ouvert__c.field-meta.xml
<CustomField>
    <fullName>Decommissionnement_de_device_ouvert__c</fullName>
    <description>Ce champ permet de savoir si un décommissionnement de device est ouvert sur le PUDO. Se base sur l&#39;objet anomalie</description>
    <label>Décommissionnement de device ouvert</label>
    <summaryFilterItems>
        <field>Anomalie__c.Type__c</field>
        <operation>equals</operation>
        <value>Décommissionnement de device</value>
    </summaryFilterItems>
    <summaryForeignKey>Anomalie__c.PUDO__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>