force-app/main/default/objects/Account/fields/Delai_d_instance__c.field-meta.xml
<CustomField>
    <fullName>Delai_d_instance__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Délai d’instance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>