force-app/main/default/objects/Account/fields/Densite_urbaine__c.field-meta.xml
<CustomField>
    <fullName>Densite_urbaine__c</fullName>
    <label>Densité urbaine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paris</fullName>
            </value>
            <value>
                <fullName>IdF 1ère couronne</fullName>
            </value>
            <value>
                <fullName>IdF hors 1ère couronne</fullName>
            </value>
            <value>
                <fullName>Centre Métropole</fullName>
            </value>
            <value>
                <fullName>Banlieue Métropole</fullName>
            </value>
            <value>
                <fullName>Centre Grande Ville</fullName>
            </value>
            <value>
                <fullName>Banlieue Grande Ville</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Hyper-urban</fullName>
            </value>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>