force-app/main/default/objects/Account/fields/Depassement_Seuil__c.field-meta.xml
<CustomField>
    <fullName>Depassement_Seuil__c</fullName>
    <formula>IF(!$User.BypassValidationRule__c, IF(ISNULL(Amplitude_horaire_du_relais__c), &#39;&#39;, IF( AND(ISPICKVAL(BillingCountryCode,&#39;FR&#39;),Amplitude_horaire_du_relais__c &gt;= 40),IMAGE(&quot;/resource/1481203431000/image_icone_OK&quot;, &#39;OK&#39;, 16, 16), 
IF( AND(NOT(ISPICKVAL(BillingCountryCode,&#39;FR&#39;)),Amplitude_horaire_du_relais__c &gt;= 37),IMAGE(&quot;/resource/1481203431000/image_icone_OK&quot;, &#39;OK&#39;, 16, 16),IMAGE(&quot;/resource/1481203391000/image_icone_warning&quot;, &#39;NOK&#39;, 16, 16)))),&#39;&#39;)</formula>
    <label>Seuil de l&#39;amplitude horaire respecté</label>
    <type>Text</type>
</CustomField>