force-app/main/default/objects/Account/fields/Derniere_synchronisation_statut__c.field-meta.xml
<CustomField>
    <fullName>Derniere_synchronisation_statut__c</fullName>
    <formula>IF(Anomalie_de_synchro_ouverte__c  &gt; 0, 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;), 
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dernière Synchronisation</label>
    <type>Text</type>
</CustomField>