force-app/main/default/objects/Account/fields/Devise__c.field-meta.xml
<CustomField>
    <fullName>Devise__c</fullName>
    <label>Devise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>CZK</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>