force-app/main/default/objects/Account/fields/Dimanche__c.field-meta.xml
<CustomField>
    <fullName>Dimanche__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dimanche</label>
    <type>Checkbox</type>
</CustomField>