force-app/main/default/objects/Account/fields/Dimanche_ferme__c.field-meta.xml
<CustomField>
    <fullName>Dimanche_ferme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dimanche fermé</label>
    <type>Checkbox</type>
</CustomField>