force-app/main/default/objects/Account/fields/Dimanche_Fermeture__c.field-meta.xml
<CustomField>
    <fullName>Dimanche_Fermeture__c</fullName>
    <label>Fermeture</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Dimanche_ferme__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>LOV_GLO_HOR</valueSetName>
    </valueSet>
</CustomField>