force-app/main/default/objects/Account/fields/Disponibilite_habituelle_date_de_d_but__c.field-meta.xml
<CustomField>
    <fullName>Disponibilite_habituelle_date_de_d_but__c</fullName>
    <inlineHelpText>Veuillez saisir la date sous format JJ/MM.</inlineHelpText>
    <label>Disponibilité habituelle - date de début</label>
    <length>5</length>
    <type>Text</type>
</CustomField>