force-app/main/default/objects/Account/fields/Disponibilite_habituelle_date_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Disponibilite_habituelle_date_de_fin__c</fullName>
    <inlineHelpText>Veuillez saisir la date sous format &quot;JJ/MM&quot;.</inlineHelpText>
    <label>Disponibilité habituelle - date de fin</label>
    <length>5</length>
    <type>Text</type>
</CustomField>